# FitsProcessor

./: .gitignore  Dockerfile  README.md  pyproject.toml  script.py  testheader.py
raw/: README.md
src/: README.md  example_run.py  helpers.py  script.py  testheader.py  validation.py  xmlgenerator.py
src/config/: README.md  XmlHeaderDetails.yaml  inputs.yaml
